sem wise try1 url correct syllabusdrive

--- a/_posts/2016-09-21-semsubj.md
+++ b/_posts/2016-09-21-semsubj.md
@@ -9,7 +9,7 @@ title: "Notes"
 <hr>
 
 #### 3 SEM
-<i>[Syllabus](https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing) </i>
+<i> [Syllabus](https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing "Syllabus").</i>
 
 
 <i>[Scheme](https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE) </i>
