sem wise try2 url correct syllabusdrive

--- a/_posts/2016-09-21-semsubj.md
+++ b/_posts/2016-09-21-semsubj.md
@@ -9,7 +9,7 @@ title: "Notes"
 <hr>
 
 #### 3 SEM
-<i> [Syllabus](https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing "Syllabus").</i>
+<i> [Syllabuss](https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing "Syllabus").</i>
 
 
 <i>[Scheme](https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE) </i>
@@ -85,14 +85,14 @@ title: "Notes"
 
 <i>MANAGEMENT & ENTREPRENEURSHIP</i>
 
-## Part A
+ Part A
 
 * [Unit 1](/assets/test.pdf)   
 * [Unit 2](/assets/test.pdf)   
 * [Unit 3](/assets/test.pdf)   
 * [Unit 4](/assets/test.pdf) 
 
-## Part B
+ Part B
   
 * [Unit 5](/assets/test.pdf)   
 * [Unit 6](/assets/test.pdf)   
@@ -102,14 +102,14 @@ title: "Notes"
 
 <i>DIGITAL SIGNAL PROCESSING</i>
 
-## Part A
+ Part A
 
 * [Unit 1](/assets/test.pdf)   
 * [Unit 2](/assets/test.pdf)   
 * [Unit 3](/assets/test.pdf)   
 * [Unit 4](/assets/test.pdf) 
 
-## Part B
+ Part B
   
 * [Unit 5](/assets/test.pdf)   
 * [Unit 6](/assets/test.pdf)   
@@ -119,14 +119,14 @@ title: "Notes"
 
 <i>ANALOG COMMUNICATION</i>
 
-## Part A
+ Part A
 
 * [Unit 1](/assets/test.pdf)   
 * [Unit 2](/assets/test.pdf)   
 * [Unit 3](/assets/test.pdf)   
 * [Unit 4](/assets/test.pdf) 
 
-## Part B
+ Part B
   
 * [Unit 5](/assets/test.pdf)   
 * [Unit 6](/assets/test.pdf)   
@@ -136,14 +136,14 @@ title: "Notes"
 
 <i>MICROWAVES AND RADAR </i>
 
-## Part A
+ Part A
 
 * [Unit 1](/assets/test.pdf)   
 * [Unit 2](/assets/test.pdf)   
 * [Unit 3](/assets/test.pdf)   
 * [Unit 4](/assets/test.pdf) 
 
-## Part B
+ Part B
   
 * [Unit 5](/assets/test.pdf)   
 * [Unit 6](/assets/test.pdf)   
@@ -153,14 +153,14 @@ title: "Notes"
 
 <i>INFORMATION THEORY AND CODING </i>
 
-## Part A
+ Part A
 
 * [Unit 1](/assets/test.pdf)   
 * [Unit 2](/assets/test.pdf)   
 * [Unit 3](/assets/test.pdf)   
 * [Unit 4](/assets/test.pdf) 
 
-## Part B
+ Part B
   
 * [Unit 5](/assets/test.pdf)   
 * [Unit 6](/assets/test.pdf)   
@@ -170,14 +170,14 @@ title: "Notes"
 
 <i>FUNDAMENTALS OF CMOS VLSI</i>
 
-## Part A
+ Part A
 
 * [Unit 1](/assets/test.pdf)   
 * [Unit 2](/assets/test.pdf)   
 * [Unit 3](/assets/test.pdf)   
 * [Unit 4](/assets/test.pdf) 
 
-## Part B
+ Part B
   
 * [Unit 5](/assets/test.pdf)   
 * [Unit 6](/assets/test.pdf)   
