sem wise try3 drive remove i

--- a/_posts/2016-09-21-semsubj.md
+++ b/_posts/2016-09-21-semsubj.md
@@ -9,17 +9,17 @@ title: "Notes"
 <hr>
 
 #### 3 SEM
-<i> [Syllabuss](https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing "Syllabus").</i>
+[Syllabuss](https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing "Syllabus").
 
 
-<i>[Scheme](https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE) </i>
+[Scheme](https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE " Scheme")
 
 <hr>
 
 
 <i>ANALOG ELECTRONICS</i>
 
-* [Module 1](/assets/test.pdf)  
+* [Module 1](/assets/test.pdf).
 * [Module 2] 
 * [Module 3]  
 * [Module 4] 
@@ -188,10 +188,12 @@ title: "Notes"
 <hr>
 
 
-<i>[DIGITAL SIGNAL PROCESSING LABORATORY ](******link ***************)  </i>
+<i>Lab Manual</i>
 
 
-<i>[ANALOG COMMUNICATION LAB + LIC LAB](******link ***************)  </i>
+[DIGITAL SIGNAL PROCESSING LABORATORY ](******link ***************)
+
+[ANALOG COMMUNICATION LAB + LIC LAB](******link ***************)
 
 
 <hr>
