sem wise try4 drive remove i

--- a/_posts/2016-09-21-semsubj.md
+++ b/_posts/2016-09-21-semsubj.md
@@ -9,10 +9,11 @@ title: "Notes"
 <hr>
 
 #### 3 SEM
-[Syllabuss](https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing "Syllabus").
+
+[ Syllabus ](https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing "Syllabus").
 
 
-[Scheme](https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE " Scheme")
+[ Scheme ](https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE " Scheme")
 
 <hr>
 
