--- a/_posts/2016-10-06-semsubj.md
+++ b/_posts/2016-10-06-semsubj.md
@@ -15,6 +15,8 @@ title: "Notes"
 
 [ Scheme ](https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE " Scheme")
 
+<a href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
+
 <hr>
 
 
