--- a/_posts/2016-10-06-semsubj.md
+++ b/_posts/2016-10-06-semsubj.md
@@ -10,10 +10,7 @@ title: "Notes"
 
 #### 3 SEM
 
-[ Syllabus ](https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing "Syllabus").
-
-
-[ Scheme ](https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE " Scheme")
+<a href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
 
 <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
 
@@ -22,55 +19,53 @@ title: "Notes"
 
 <i>ANALOG ELECTRONICS</i>
 
-* [Module 1](/assets/test.pdf).
-* [Module 2] 
-* [Module 3]  
-* [Module 4] 
-* [Module 5](/assets/test.pdf)  
+* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
+* Module 2 
+* Module 3  
+* Module 4 
+* Module 5
 
 
 <i>DIGITAL ELECTRONICS </i>
 
-* [Module 1](/assets/test.pdf)  
-* [Module 2] 
-* [Module 3]  
-* [Module 4] 
-* [Module 5](/assets/test.pdf)  
-
+* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
+* Module 2 
+* Module 3  
+* Module 4 
+* Module 5
 
 <i>NETWORK ANALYSIS </i>
 
-* [Module 1](/assets/test.pdf)  
-* [Module 2] 
-* [Module 3]  
-* [Module 4] 
-* [Module 5](/assets/test.pdf)  
-
+* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
+* Module 2 
+* Module 3  
+* Module 4 
+* Module 5
 
 <i>ELECTRONIC INSTRUMENTATION </i>
 
-* [Module 1](/assets/test.pdf)  
-* [Module 2] 
-* [Module 3]  
-* [Module 4] 
-* [Module 5](/assets/test.pdf)  
+* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
+* Module 2 
+* Module 3  
+* Module 4 
+* Module 5
 
 <i>ENGINEERING ELECTROMAGNETICS </i>
 
-* [Module 1](/assets/test.pdf)  
-* [Module 2] 
-* [Module 3]  
-* [Module 4] 
-* [Module 5](/assets/test.pdf)  
+* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
+* Module 2 
+* Module 3  
+* Module 4 
+* Module 5
 
 
 <hr>
 
 
-<i>[ANALOG ELECTRONICS LABORATORY](******link ***************)  </i>
+<i>ANALOG ELECTRONICS LABORATORY </i>
 
 
-<i>[DIGITAL ELECTRONICS LABORATORY ](******link ***************)  </i>
+<i>DIGITAL ELECTRONICS LABORATORY </i>
 
 
 <hr>
@@ -80,8 +75,11 @@ title: "Notes"
 #### 5 SEM
 <i>[Syllabus](https://drive.google.com/open?id=0B9cqMjKT9M-dWm9fdTAxTUZ4d1U) </i>
 
+<a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWm9fdTAxTUZ4d1U">Syllabus</a>
 
 <i>[Scheme](https://drive.google.com/open?id=0B9cqMjKT9M-dYUVPX3Z3aERjZHc) </i>
+
+<a href="https://drive.google.com/open?id=0B9cqMjKT9M-dYUVPX3Z3aERjZHc">Scheme</a>
 
 <hr>
 
@@ -90,102 +88,102 @@ title: "Notes"
 
  Part A
 
-* [Unit 1](/assets/test.pdf)   
-* [Unit 2](/assets/test.pdf)   
-* [Unit 3](/assets/test.pdf)   
-* [Unit 4](/assets/test.pdf) 
+* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
+* Unit 2
+* Unit 3  
+* Unit 4 
 
  Part B
   
-* [Unit 5](/assets/test.pdf)   
-* [Unit 6](/assets/test.pdf)   
-* [Unit 7](/assets/test.pdf)  
-* [Unit 8](/assets/test.pdf)    
+* Unit 5  
+* Unit 6   
+* Unit 7 
+* Unit 8   
 
 
 <i>DIGITAL SIGNAL PROCESSING</i>
 
  Part A
 
-* [Unit 1](/assets/test.pdf)   
-* [Unit 2](/assets/test.pdf)   
-* [Unit 3](/assets/test.pdf)   
-* [Unit 4](/assets/test.pdf) 
+* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
+* Unit 2
+* Unit 3  
+* Unit 4 
 
  Part B
   
-* [Unit 5](/assets/test.pdf)   
-* [Unit 6](/assets/test.pdf)   
-* [Unit 7](/assets/test.pdf)  
-* [Unit 8](/assets/test.pdf)       
+* Unit 5  
+* Unit 6   
+* Unit 7 
+* Unit 8   
 
 
 <i>ANALOG COMMUNICATION</i>
 
  Part A
 
-* [Unit 1](/assets/test.pdf)   
-* [Unit 2](/assets/test.pdf)   
-* [Unit 3](/assets/test.pdf)   
-* [Unit 4](/assets/test.pdf) 
+* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
+* Unit 2
+* Unit 3  
+* Unit 4 
 
  Part B
   
-* [Unit 5](/assets/test.pdf)   
-* [Unit 6](/assets/test.pdf)   
-* [Unit 7](/assets/test.pdf)  
-* [Unit 8](/assets/test.pdf)       
+* Unit 5  
+* Unit 6   
+* Unit 7 
+* Unit 8   
 
 
 <i>MICROWAVES AND RADAR </i>
 
  Part A
 
-* [Unit 1](/assets/test.pdf)   
-* [Unit 2](/assets/test.pdf)   
-* [Unit 3](/assets/test.pdf)   
-* [Unit 4](/assets/test.pdf) 
+* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
+* Unit 2
+* Unit 3  
+* Unit 4 
 
  Part B
   
-* [Unit 5](/assets/test.pdf)   
-* [Unit 6](/assets/test.pdf)   
-* [Unit 7](/assets/test.pdf)  
-* [Unit 8](/assets/test.pdf)       
+* Unit 5  
+* Unit 6   
+* Unit 7 
+* Unit 8   
 
 
 <i>INFORMATION THEORY AND CODING </i>
 
  Part A
 
-* [Unit 1](/assets/test.pdf)   
-* [Unit 2](/assets/test.pdf)   
-* [Unit 3](/assets/test.pdf)   
-* [Unit 4](/assets/test.pdf) 
+* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
+* Unit 2
+* Unit 3  
+* Unit 4 
 
  Part B
   
-* [Unit 5](/assets/test.pdf)   
-* [Unit 6](/assets/test.pdf)   
-* [Unit 7](/assets/test.pdf)  
-* [Unit 8](/assets/test.pdf)       
+* Unit 5  
+* Unit 6   
+* Unit 7 
+* Unit 8   
 
 
 <i>FUNDAMENTALS OF CMOS VLSI</i>
 
  Part A
 
-* [Unit 1](/assets/test.pdf)   
-* [Unit 2](/assets/test.pdf)   
-* [Unit 3](/assets/test.pdf)   
-* [Unit 4](/assets/test.pdf) 
+* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
+* Unit 2
+* Unit 3  
+* Unit 4 
 
  Part B
   
-* [Unit 5](/assets/test.pdf)   
-* [Unit 6](/assets/test.pdf)   
-* [Unit 7](/assets/test.pdf)  
-* [Unit 8](/assets/test.pdf)    
+* Unit 5  
+* Unit 6   
+* Unit 7 
+* Unit 8   
 
 
 <hr>
@@ -194,9 +192,9 @@ title: "Notes"
 <i>Lab Manual</i>
 
 
-[DIGITAL SIGNAL PROCESSING LABORATORY ](******link ***************)
+<a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">DIGITAL SIGNAL PROCESSING LABORATORY</a>  
 
-[ANALOG COMMUNICATION LAB + LIC LAB](******link ***************)
+ANALOG COMMUNICATION LAB + LIC LAB
 
 
 <hr>
