a tag + md tag blank

--- a/_posts/2016-10-06-semsubj.md
+++ b/_posts/2016-10-06-semsubj.md
@@ -10,9 +10,9 @@ title: "Notes"
 
 #### 3 SEM
 
-<a href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
+<a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
 
-<a href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
+<a target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
 
 <hr>
 
