a tag + md tag blank all try

--- a/_posts/2016-10-06-semsubj.md
+++ b/_posts/2016-10-06-semsubj.md
@@ -19,7 +19,7 @@ title: "Notes"
 
 <i>ANALOG ELECTRONICS</i>
 
-* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
 * Module 2 
 * Module 3  
 * Module 4 
@@ -28,7 +28,7 @@ title: "Notes"
 
 <i>DIGITAL ELECTRONICS </i>
 
-* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
 * Module 2 
 * Module 3  
 * Module 4 
@@ -36,7 +36,7 @@ title: "Notes"
 
 <i>NETWORK ANALYSIS </i>
 
-* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
+* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
 * Module 2 
 * Module 3  
 * Module 4 
@@ -44,7 +44,7 @@ title: "Notes"
 
 <i>ELECTRONIC INSTRUMENTATION </i>
 
-* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
+* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
 * Module 2 
 * Module 3  
 * Module 4 
@@ -52,7 +52,7 @@ title: "Notes"
 
 <i>ENGINEERING ELECTROMAGNETICS </i>
 
-* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
+* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Module 1</a>.
 * Module 2 
 * Module 3  
 * Module 4 
@@ -75,11 +75,11 @@ title: "Notes"
 #### 5 SEM
 <i>[Syllabus](https://drive.google.com/open?id=0B9cqMjKT9M-dWm9fdTAxTUZ4d1U) </i>
 
-<a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWm9fdTAxTUZ4d1U">Syllabus</a>
+<a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWm9fdTAxTUZ4d1U">Syllabus</a>
 
 <i>[Scheme](https://drive.google.com/open?id=0B9cqMjKT9M-dYUVPX3Z3aERjZHc) </i>
 
-<a href="https://drive.google.com/open?id=0B9cqMjKT9M-dYUVPX3Z3aERjZHc">Scheme</a>
+<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dYUVPX3Z3aERjZHc">Scheme</a>
 
 <hr>
 
@@ -88,7 +88,7 @@ title: "Notes"
 
  Part A
 
-* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -105,7 +105,7 @@ title: "Notes"
 
  Part A
 
-* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -122,7 +122,7 @@ title: "Notes"
 
  Part A
 
-* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
+* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -139,7 +139,7 @@ title: "Notes"
 
  Part A
 
-* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
+* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -156,7 +156,7 @@ title: "Notes"
 
  Part A
 
-* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
+* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -173,7 +173,7 @@ title: "Notes"
 
  Part A
 
-* <a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
+* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">Unit 1</a>  
 * Unit 2
 * Unit 3  
 * Unit 4 
@@ -192,7 +192,7 @@ title: "Notes"
 <i>Lab Manual</i>
 
 
-<a href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">DIGITAL SIGNAL PROCESSING LABORATORY</a>  
+<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">DIGITAL SIGNAL PROCESSING LABORATORY</a>  
 
 ANALOG COMMUNICATION LAB + LIC LAB
 
