--- a/_posts/2016-10-06-semsubj.md
+++ b/_posts/2016-10-06-semsubj.md
@@ -36,7 +36,7 @@ title: "Notes"
 
 <i>NETWORK ANALYSIS </i>
 
-* <a  target="_blank" https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
 * Module 3  
 * Module 4 
@@ -62,10 +62,10 @@ title: "Notes"
 <hr>
 
 
-<i>ANALOG ELECTRONICS LABORATORY </i>
+<i>ANALOG ELECTRONICS LABORATORY</i>
 
 
-<i>DIGITAL ELECTRONICS LABORATORY </i>
+<i>DIGITAL ELECTRONICS LABORATORY</i>
 
 
 <hr>
