--- a/_posts/2016-10-06-semsubj.md
+++ b/_posts/2016-10-06-semsubj.md
@@ -34,7 +34,7 @@ title: "Notes"
 * Module 4 
 * Module 5
 
-<i>NETWORK ANALYSIS </i>
+<i>NETWORK ANALYSIS sssss</i>
 
 * <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
