--- a/_posts/2016-10-06-fullnav.md
+++ b/_posts/2016-10-06-fullnav.md
@@ -1,5 +1,5 @@
 ---
-title: "Notes"
+title: "Note"
 ---
 
 <nav class="toc" markdown="1">
@@ -12,7 +12,7 @@ title: "Notes"
 #### 3 SEM
 
 <nav class="toc2" markdown="1">
-*   
++ 
 {:toc}
 </nav>
 <hr>
