--- a/_posts/2016-10-06-fullnav.md
+++ b/_posts/2016-10-06-fullnav.md
@@ -1,5 +1,5 @@
 ---
-title: "Noteasdf"
+title: "Noteasdfffffff"
 ---
 
 <nav class="toc" markdown="1">
@@ -13,7 +13,7 @@ title: "Noteasdf"
 
 <nav class="toc2" markdown="1">
 
-{:toc}
+{:toc2}
 </nav>
 <hr>
 
