--- a/_posts/2016-10-06-fullnav.md
+++ b/_posts/2016-10-06-fullnav.md
@@ -1,5 +1,5 @@
 ---
-title: "Noteasdfffffff"
+title: "Noteasd"
 ---
 
 <nav class="toc" markdown="1">
@@ -8,8 +8,10 @@ title: "Noteasdfffffff"
 </nav>
 <hr>
 
-
+<div>
 #### 3 SEM
+
+<div>
 
 <nav class="toc2" markdown="1">
 
@@ -74,7 +76,7 @@ title: "Noteasdfffffff"
 
 <i>DIGITAL ELECTRONICS LABORATORY</i>
 
-
+</div>
 <hr>
 
 
@@ -378,3 +380,4 @@ POWER ELECTRONICS LAB
 
 <hr>
 
+</div>
