--- a/_posts/2016-10-06-fullnav.md
+++ b/_posts/2016-10-06-fullnav.md
@@ -10,14 +10,14 @@ title: "Noteasd"
 
 #### 3 SEM
 
-# <a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
+<a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
 
 <a target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
 
 <hr>
 
 
-# <i>ANALOG ELECTRONICS</i>
+<i>ANALOG ELECTRONICS</i>
 
 * <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
@@ -26,7 +26,7 @@ title: "Noteasd"
 * Module 5
 
 
-# <i>DIGITAL ELECTRONICS </i>
+<i>DIGITAL ELECTRONICS </i>
 
 * <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
@@ -34,7 +34,7 @@ title: "Noteasd"
 * Module 4 
 * Module 5
 
-# <i>NETWORK ANALYSIS </i>
+<i>NETWORK ANALYSIS </i>
 
 * <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
