--- a/_posts/2016-10-06-fullnav.md
+++ b/_posts/2016-10-06-fullnav.md
@@ -1,5 +1,5 @@
 ---
-title: "Noteasd"
+title: "Notea"
 ---
 
 <nav class="toc" markdown="1">
@@ -7,6 +7,8 @@ title: "Noteasd"
 {:toc}
 </nav>
 <hr>
+<div>
+
 
 #### 3 SEM
 
@@ -68,9 +70,13 @@ title: "Noteasd"
 <i>DIGITAL ELECTRONICS LABORATORY</i>
 
 
+
+
+</div>
+
 <hr>
 
-
+<div>
 
 #### 5 SEM
 
@@ -194,7 +200,11 @@ title: "Noteasd"
 ANALOG COMMUNICATION LAB + LIC LAB
 
 
+</div>
+
 <hr>
+
+<div>
 
 #### 7 SEM
 
@@ -368,6 +378,8 @@ ANALOG COMMUNICATION LAB + LIC LAB
 <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c"> VLSI LAB</a>  
 
 POWER ELECTRONICS LAB
+
+</div>
 
 <hr>
 
