--- a/_posts/2016-10-06-semsubj.md
+++ b/_posts/2016-10-06-semsubj.md
@@ -1,5 +1,5 @@
 ---
-title: "ECE Notes"
+title: "ECE-Notes"
 ---
 
 <nav class="toc" markdown="1">
@@ -82,6 +82,11 @@ title: "ECE Notes"
 
 
 
+
+
+
+
+<hr>
 
 <i>ANALOG ELECTRONICS</i>
 
