--- a/_posts/2016-10-06-semsubj.md
+++ b/_posts/2016-10-06-semsubj.md
@@ -1,5 +1,5 @@
 ---
-title: "ECE-Notes"
+title: "ECE Notes"
 ---
 
 <nav class="toc" markdown="1">
@@ -7,6 +7,47 @@ title: "ECE-Notes"
 {:toc}
 </nav>
 <hr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #### 1 SEM
 
@@ -16,127 +57,13 @@ title: "ECE-Notes"
 
 <hr>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<hr>
-
-<i>ANALOG ELECTRONICS</i>
+<i>ELECTRONICS</i>
 
 * <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
 * Module 3  
 * Module 4 
 * Module 5
-
-
-<i>DIGITAL ELECTRONICS </i>
-
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
-
-<i>NETWORK ANALYSIS </i>
-
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
-
-<i>ELECTRONIC INSTRUMENTATION </i>
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
-
-<i>ENGINEERING ELECTROMAGNETICS </i>
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
-
-
-<hr>
-
-
-<i>ANALOG ELECTRONICS LABORATORY</i>
-
-
-<i>DIGITAL ELECTRONICS LABORATORY</i>
 
 
 <hr>
