--- a/_posts/2016-10-06-semsubj.md
+++ b/_posts/2016-10-06-semsubj.md
@@ -2,6 +2,9 @@
 title: "ECE - Notes"
 ---
 
+<a target="_blank" href=" https://yogugithub.github.io/TestGithub/fullnav/  ">try</a>
+
+
 <nav class="toc" markdown="1">
 *   
 {:toc}
