--- a/_posts/2016-10-06-semsubj.md
+++ b/_posts/2016-10-06-semsubj.md
@@ -1,8 +1,6 @@
 ---
-title: "ECE - Notes"
+title: "ECE Notes"
 ---
-
-<a target="_blank" href=" https://yogugithub.github.io/TestGithub/fullnav/  ">try</a>
 
 
 <nav class="toc" markdown="1">
@@ -11,69 +9,8 @@ title: "ECE - Notes"
 </nav>
 <hr>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
 #### 1 SEM
-
-<a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
-
-<a target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
-
-<hr>
-
-<i>ELECTRONICS</i>
-
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
-
-
-<hr>
 
 #### 3 SEM
 
