--- a/_posts/2016-10-06-semsubj.md
+++ b/_posts/2016-10-06-semsubj.md
@@ -1,18 +1,14 @@
 ---
-title: "ECE Notes"
+title: "ECE-Notes"
 ---
 
 
-<nav class="toc" markdown="1">
-*   
-{:toc}
-</nav>
 <hr>
 
 
-#### 1 SEM
+<a href="{{ site.baseurl }}/1">1 Semseter</a>
 
-#### 3 SEM
+3 SEM
 
 <a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
 
