--- a/_posts/1.md
+++ b/_posts/1.md
@@ -2,21 +2,15 @@
 title: "ECE - Notes"
 ---
 
-<nav class="toc" markdown="1">
-*   
-{:toc}
-</nav>
-<hr>
-
- 1 SEM
-
-# <a href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
-
-# <a target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
+# 1 SEM
 
 <hr>
 
-# ELECTRONICS
+##### <a href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
+
+#####  <a target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dcXdjRjZMSlNsTkE">Scheme</a>
+
+#####  ELECTRONICS
 
 * <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
