--- a/_posts/2016-09-21-1.md
+++ b/_posts/2016-09-21-1.md
@@ -8,7 +8,7 @@ title: "ECE - Notes"
 </nav>
 <hr>
 
- 1 SEM
+ 1 SEMcorrect
 
 # <a href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
 
