--- a/_posts/2016-09-21-1.md
+++ b/_posts/2016-09-21-1.md
@@ -1,8 +1,8 @@
 ---
-title: "ECE - Notes"
+title: "1st year Notes"
 ---
 
-# ELECTRONICS
+### ELECTRONICS
 <hr>
 
  <a href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
