--- a/_posts/2016-10-06-4.md
+++ b/_posts/2016-10-06-4.md
@@ -1,5 +1,5 @@
 ---
-title: "Notea"
+title: "4 SEM Notes"
 ---
 
 <nav class="toc" markdown="1">
@@ -8,10 +8,7 @@ title: "Notea"
 </nav>
 <hr>
 
-<div>
 
-
-#### 3 SEM
 
 
 <a target="_blank" href="https://drive.google.com/file/d/0B9cqMjKT9M-dNFk0OXBEWUwzbzA/view?usp=sharing">Syllabus</a>
@@ -20,368 +17,61 @@ title: "Notea"
 
 <hr>
 
+ # <i>S1</i>
 
-<i>ANALOG ELECTRONICS</i>
+* Module 1
+* Module 2 
+* Module 3  
+* Module 4 
+* Module 5
 
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
+ # <i>S2</i>
+
+* Module 1
 * Module 2 
 * Module 3  
 * Module 4 
 * Module 5
 
 
-<i>DIGITAL ELECTRONICS </i>
+ # <i>S3</i>
 
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
+* Module 1
 * Module 2 
 * Module 3  
 * Module 4 
 * Module 5
 
-<i>NETWORK ANALYSIS </i>
+ # <i>S4</i>
 
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
+* Module 1
 * Module 2 
 * Module 3  
 * Module 4 
 * Module 5
 
-<i>ELECTRONIC INSTRUMENTATION </i>
+ # <i>S5</i>
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
+* Module 1
 * Module 2 
 * Module 3  
 * Module 4 
 * Module 5
 
-<i>ENGINEERING ELECTROMAGNETICS </i>
+ # <i>S6</i>
 
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
+* Module 1
 * Module 2 
 * Module 3  
 * Module 4 
 * Module 5
 
-
 <hr>
 
 
-<i>ANALOG ELECTRONICS LABORATORY</i>
+# <i>LABORATORY 1</i>
 
 
-<i>DIGITAL ELECTRONICS LABORATORY</i>
-
-
-
-
-</div>
+# <i>LABORATORY 2</i>
 
 <hr>
-
-<div>
-
-#### 5 SEM
-
-<a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWm9fdTAxTUZ4d1U">Syllabus</a>
-
-<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dYUVPX3Z3aERjZHc">Scheme</a>
-
-<hr>
-
-
-<i>MANAGEMENT & ENTREPRENEURSHIP</i>
-
- Part A
-
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>DIGITAL SIGNAL PROCESSING</i>
-
- Part A
-
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>ANALOG COMMUNICATION</i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>MICROWAVES AND RADAR </i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>INFORMATION THEORY AND CODING </i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>FUNDAMENTALS OF CMOS VLSI</i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<hr>
-
-
-<i>Lab Manual</i>
-
-
-<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c">DIGITAL SIGNAL PROCESSING LABORATORY</a>  
-
-ANALOG COMMUNICATION LAB + LIC LAB
-
-
-</div>
-
-<hr>
-
-<div>
-
-#### 7 SEM
-
-<a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dWm9fdTAxTUZ4d1U">Syllabus</a>
-
-<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dYUVPX3Z3aERjZHc">Scheme</a>
-
-<hr>
-
-
-<i> COMPUTER COMMUNICATION NETWORKS</i>
-
- Part A
-
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>OPTICAL FIBER COMMUNICATION</i>
-
- Part A
-
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>POWER ELECTRONICS </i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>EMBEDED SYSTEM DESIGN </i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>DSP ALGORITHMS AND ARCHITECTURE </i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>MICRO AND SMART SYSTEMS TECHNOLOGY</i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>ARTIFICIAL NEURAL NETWORKS</i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-
-<i>CAD FOR VLSI</i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<i>APPLIED EMBEDDED SYSTEM DESIGN </i>
-
- Part A
-
-* <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Unit 1</a>  
-* Unit 2
-* Unit 3  
-* Unit 4 
-
- Part B
-  
-* Unit 5  
-* Unit 6   
-* Unit 7 
-* Unit 8   
-
-
-<hr>
-
-
-<i>Lab Manual</i>
-
-
-<a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dWl9uMU1uTC1tS3c"> VLSI LAB</a>  
-
-POWER ELECTRONICS LAB
-
-</div>
-
-<hr>
-
