--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -17,99 +17,17 @@ title: "3 SEM Notes"
 <hr>
 
 
+#### ANALOG ELECTRONICS LABORATORY
 
 
+#### DIGITAL ELECTRONICS LABORATORY
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<hr>
 
 <hr>
 
 
- # <i>ANALOG ELECTRONICS</i>
+ #### ANALOG ELECTRONICS
 
 * <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
@@ -118,7 +36,7 @@ title: "3 SEM Notes"
 * Module 5
 
 
-<i>DIGITAL ELECTRONICS </i>
+#### DIGITAL ELECTRONICS
 
 * <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
@@ -126,7 +44,7 @@ title: "3 SEM Notes"
 * Module 4 
 * Module 5
 
-# <i>NETWORK ANALYSIS </i>
+#### NETWORK ANALYSIS
 
 * <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
@@ -134,7 +52,7 @@ title: "3 SEM Notes"
 * Module 4 
 * Module 5
 
-# <i>ELECTRONIC INSTRUMENTATION </i>
+#### ELECTRONIC INSTRUMENTATION
 
 * <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
@@ -142,7 +60,7 @@ title: "3 SEM Notes"
 * Module 4 
 * Module 5
 
-# <i>ENGINEERING ELECTROMAGNETICS </i>
+#### ENGINEERING ELECTROMAGNETICS
 
 * <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
@@ -150,13 +68,5 @@ title: "3 SEM Notes"
 * Module 4 
 * Module 5
 
-
-<hr>
-
-
-# <i>ANALOG ELECTRONICS LABORATORY</i>
-
-
-# <i>DIGITAL ELECTRONICS LABORATORY</i>
 
 <hr>
