--- a/_posts/2016-10-06-3.md
+++ b/_posts/2016-10-06-3.md
@@ -17,26 +17,17 @@ title: "3 SEM Notes"
 <hr>
 
 
-#### ANALOG ELECTRONICS LABORATORY
+ ANALOG ELECTRONICS LABORATORY
 
 
-#### DIGITAL ELECTRONICS LABORATORY
-
-<hr>
+ DIGITAL ELECTRONICS LABORATORY
 
 <hr>
 
-
- #### ANALOG ELECTRONICS
-
-* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
-* Module 2 
-* Module 3  
-* Module 4 
-* Module 5
+<hr>
 
 
-#### DIGITAL ELECTRONICS
+ANALOG ELECTRONICS
 
 * <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
@@ -44,7 +35,8 @@ title: "3 SEM Notes"
 * Module 4 
 * Module 5
 
-#### NETWORK ANALYSIS
+
+ DIGITAL ELECTRONICS
 
 * <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
@@ -52,7 +44,15 @@ title: "3 SEM Notes"
 * Module 4 
 * Module 5
 
-#### ELECTRONIC INSTRUMENTATION
+ NETWORK ANALYSIS
+
+* <a target="_blank"  href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
+* Module 2 
+* Module 3  
+* Module 4 
+* Module 5
+
+ ELECTRONIC INSTRUMENTATION
 
 * <a  target="_blank" href="https://drive.google.com/open?id=0B9cqMjKT9M-dNHJNdWpMQUFiNnc">Module 1</a>.
 * Module 2 
